Change primary color, layout, font

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,28 @@
 ---
-name: Tails Azimuth
+name: Shyam Kumar
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
+occupation: Full-Stack Developer
+company: Cyber Sapient Technologies
+email: shyamenk@gmail.com
 twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+linkedin: https://www.linkedin.com/in/shyamenk/
+github: https://github.com/shyamenk/
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+🚀 Full-Stack Developer | JavaScript Enthusiast
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+Hi there! I'm a passionate Full-Stack Developer with a keen interest in creating seamless and dynamic web applications. My toolkit includes JavaScript, TypeScript, Next.js, React, and Tailwind CSS. I thrive on bringing innovative ideas to life through code and continuously pushing the boundaries of web development.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+🔍 Continuous Learner | AWS & Linux Explorer
+
+Beyond coding, I'm deeply invested in expanding my knowledge in AWS and Linux. Whether it's deploying scalable applications or mastering the intricacies of server management, I'm always eager to learn and grow.
+
+✨ What Drives Me?
+
+Building intuitive and responsive user interfaces
+Solving complex problems with elegant solutions
+Staying ahead of the curve with the latest tech trends
+Collaborating with like-minded professionals to create amazing products
+💡 Let's Connect!
+
+I'm always excited to connect with fellow developers, share knowledge, and collaborate on exciting projects. Feel free to reach out!
