feat: add new styles

--- a/data/blog/rust-programing-language.mdx
+++ b/data/blog/rust-programing-language.mdx
@@ -3,6 +3,9 @@ title: Unlocking Performance and Safety with Rust
 date: '2024-05-08'
 tags: ['rust', 'programing-language']
 draft: false
+layout: PostBanner
+images: ['/static/images/rust.png']
+
 summary: 'Unlocking Performance and Safety with Rust'
 ---
 
