feat: add skeleton loader

--- a/data/blog/quantum-computing.mdx
+++ b/data/blog/quantum-computing.mdx
@@ -9,7 +9,7 @@ images: ['/static/images/quantum.jpg']
 summary: 'Dive into the world of quantum computing, its potential to solve complex problems, and the challenges it presents to current systems.'
 ---
 
-Quantum computing represents a paradigm shift in computational power, leveraging the principles of quantum mechanics to process information in ways that classical computers cannot. Here's why it's generating so much excitement:
+### Quantum computing represents a paradigm shift in computational power, leveraging the principles of quantum mechanics to process information in ways that classical computers cannot. Here's why it's generating so much excitement:
 
 1. **Exponential Processing Power**: Quantum computers can potentially solve certain problems exponentially faster than classical computers.
 
@@ -21,7 +21,11 @@ Quantum computing represents a paradigm shift in computational power, leveraging
 
 5. **Artificial Intelligence**: Quantum machine learning algorithms could dramatically enhance AI capabilities.
 
-However, quantum computing also presents significant challenges:
+> However, quantum computing also presents significant challenges:
+
+That is so funny! :joy:
+
+I need to highlight these ==very important words==.
 
 - **Cryptography**: Many current encryption methods could be vulnerable to quantum attacks, necessitating the development of quantum-resistant cryptography.
 
