--- a/data/blog/how-web-works.mdx
+++ b/data/blog/how-web-works.mdx
@@ -8,184 +8,180 @@ images: ['/static/images/http.jpeg']
 summary: 'HTTP is a protocol that enables communication between clients and servers on the web through a request-response model.'
 ---
 
-# The Internet's Hidden Language
+## Understanding HTTP: The Protocol that Powers the Web
 
-Every time you click a link, send an email, or scroll through social media, you're speaking HTTP without even knowing it. This hidden language powers the modern web, and today, we're going to crack its code.
+Every digital interaction on the web—from checking emails to streaming videos—relies on HTTP (Hypertext Transfer Protocol). This fundamental protocol enables seamless communication between clients and servers, forming the backbone of our digital experiences.
 
-## The Digital Handshake: How It All Begins
+Let's explore how it works, why it matters, and how to leverage it effectively.
 
-Imagine walking into a busy restaurant. Before you can order, you need to catch a waiter's attention. On the internet, this initial interaction happens through something called the _TCP handshake:_
+## The Essence of HTTP
 
-![Three Way handshake](/static/images/three-way.jpg)
+At its core, HTTP is a request-response protocol that enables two key actions:
 
-```bash
-Client: "Hey, can we talk?" (SYN)
-Server: "Sure, I'm listening!" (SYN-ACK)
-Client: "Great, let's begin!" (ACK)
-```
+1. Clients (like your browser) make requests for resources
+2. Servers respond with the requested data or appropriate status messages
 
-This three-way handshake isn't just polite—it's essential. It establishes a reliable connection that ensures your data reaches its destination intact.
+This simple model powers everything from simple webpage loads to complex API interactions.
 
-## Speaking HTTP: The Universal Language
+## Understanding the HTTP Flow
 
-Once the handshake is complete, HTTP takes center stage. Every HTTP conversation consists of two parts: requests and responses. Think of it as ordering at that restaurant:
+### The TCP Handshake: Establishing Connection
 
-### The Request: Placing Your Order
+Before any HTTP communication begins, a TCP connection is established through a three-way handshake:
 
 ```http
-GET /menu.html HTTP/1.1
-Host: restaurant.com
-User-Agent: Mozilla/5.0
-Accept: text/html
+1. Client → Server: SYN
+2. Server → Client: SYN-ACK
+3. Client → Server: ACK
 ```
 
-This is you saying, "I'd like to see the menu, please!" But HTTP gives you more options than just "GET":
+This process ensures reliable communication between the client and server.
 
-- **GET**: Show me what you've got
-- **POST**: Here's something new for you
-- **PUT**: Please update this
-- **DELETE**: Remove this, please
+### HTTP Methods: The Communication Vocabulary
 
-### The Response: Service with a Status Code
+HTTP defines several methods for client-server interaction:
+
+| Method | Purpose                   | Example Use Case             |
+| ------ | ------------------------- | ---------------------------- |
+| GET    | Retrieve resources        | Fetching a webpage           |
+| POST   | Submit new data           | Creating a new user          |
+| PUT    | Update existing resources | Updating profile information |
+| DELETE | Remove resources          | Deleting a post              |
+
+### Status Codes: Server Response Language
+
+Servers communicate results through status codes:
+
+- **2xx Success**
+
+  - 200: OK
+  - 201: Created
+  - 204: No Content
+
+- **3xx Redirection**
+
+  - 301: Moved Permanently
+  - 302: Found
+  - 304: Not Modified
+
+- **4xx Client Errors**
+
+  - 400: Bad Request
+  - 401: Unauthorized
+  - 404: Not Found
+
+- **5xx Server Errors**
+  - 500: Internal Server Error
+  - 502: Bad Gateway
+  - 503: Service Unavailable
+
+## Security Through HTTPS
+
+HTTPS adds essential security features to HTTP:
+
+1. **Encryption**: Protects data in transit
+2. **Authentication**: Verifies server identity
+3. **Integrity**: Ensures data hasn't been tampered with
 
 ```http
-HTTP/1.1 200 OK
-Content-Type: text/html
-Content-Length: 1234
-
-<!DOCTYPE html>
+# Example of security headers
+Strict-Transport-Security: max-age=31536000
+Content-Security-Policy: default-src 'self'
+X-Content-Type-Options: nosniff
 ```
 
-The server responds with a status code—think of it as the waiter's response:
+## Modern HTTP Features
 
-- **2xx**: "Coming right up!" (Success)
-- **3xx**: "We moved to the table over there" (Redirection)
-- **4xx**: "Sorry, we don't have that" (Client Error)
-- **5xx**: "Our kitchen is having problems" (Server Error)
+### HTTP/2 Enhancements
 
-## Security: The Digital Bouncer
+HTTP/2 introduced several performance improvements:
 
-HTTPS adds a layer of security to our restaurant analogy. It's like having a private booth where nobody can eavesdrop on your conversation. Every secure website uses HTTPS to:
+1. **Multiplexing**
 
-- Encrypt your data
-- Verify server identity
-- Protect against tampering
+   - Multiple requests/responses over single connection
+   - Eliminates head-of-line blocking
 
-## Performance: The Speed of Service
+2. **Server Push**
 
-Modern HTTP is all about speed. Here's how it delivers:
-
-### HTTP/2 Multiplexing
-
-Instead of waiting for each dish to arrive separately, HTTP/2 lets multiple requests travel simultaneously. One waiter can efficiently handle multiple orders at once.
-
-### Caching
-
-Think of caching as keeping a menu at home. Why ask for it again when you already have a copy? Smart caching can dramatically improve website performance:
-
-```http
-Cache-Control: max-age=3600
-ETag: "123456789"
-```
-
-## Best Practices: The Recipe for Success
-
-### 1. Always Use HTTPS
-
-```http
-Strict-Transport-Security: max-age=31536000; includeSubDomains
-```
-
-This header tells browsers to always use secure connections. No exceptions.
-
-### 2. Implement Proper Error Handling
-
-Don't just say something went wrong—explain what happened and how to fix it:
-
-```http
-HTTP/1.1 400 Bad Request
-Content-Type: application/json
-
-{
-  "error": "Missing required field: email",
-  "field": "email",
-  "hint": "Please provide a valid email address"
-}
-```
-
-### 3. Optimize Performance
-
-- Enable compression
-- Use appropriate caching headers
-- Minimize payload size
-
-## The Future: What's Next?
-
-HTTP/3 is already on the horizon, promising even faster connections using QUIC protocol. It's like upgrading from a regular restaurant to a high-tech automated service—same great food, delivered faster.
-
-## Key Takeaways: Your HTTP Cheat Sheet
-
-1. **The Basics**
-
-   - HTTP is request-response based
-   - Every request gets exactly one response
-   - HTTPS is non-negotiable
-
-2. **Methods Matter**
-
-   - GET for retrieving
-   - POST for creating
-   - PUT for updating
-   - DELETE for removing
-
-3. **Status Codes**
-
-   - 2xx = Success
-   - 3xx = Redirection
-   - 4xx = Client Error
-   - 5xx = Server Error
-
-4. **Headers Are Important**
    ```http
-   Cache-Control: public, max-age=31536000
-   Content-Type: application/json
-   Authorization: Bearer <token>
+   Link: </styles.css>; rel=preload; as=style
    ```
 
-## In Practice: Real-World Implementation
+3. **Header Compression**
+   - Reduces overhead
+   - Improves latency
 
-Here's a complete HTTP conversation:
+### Caching Strategies
+
+Effective caching improves performance:
 
 ```http
--> Request
-POST /api/orders HTTP/1.1
-Host: restaurant.com
+Cache-Control: public, max-age=3600
+ETag: "33a64df551425fcc55e4d42a148795d9f25f89d4"
+```
+
+## Best Practices
+
+### 1. Request/Response Design
+
+```http
+# Request Example
+POST /api/users HTTP/1.1
 Content-Type: application/json
-Authorization: Bearer xyz123
 
 {
-  "item": "pizza",
-  "quantity": 1
+    "username": "john_doe",
+    "email": "john@example.com"
 }
 
-<- Response
+# Response Example
 HTTP/1.1 201 Created
 Content-Type: application/json
 
 {
-  "orderId": "12345",
-  "status": "preparing",
-  "estimatedDelivery": "15 minutes"
+    "id": "123",
+    "status": "success",
+    "message": "User created successfully"
 }
 ```
 
-## Conclusion: The Power of Understanding
+### 2. Error Handling
 
-HTTP isn't just a protocol—it's the backbone of modern web communication. By understanding its principles, you can:
+Implement informative error responses:
 
-- Build more reliable applications
-- Implement better security measures
-- Optimize performance effectively
-- Debug problems more efficiently
+```json
+{
+  "error": {
+    "code": "VALIDATION_ERROR",
+    "message": "Invalid input provided",
+    "details": [
+      {
+        "field": "email",
+        "message": "Must be a valid email address"
+      }
+    ]
+  }
+}
+```
 
-> [!Note] Remember: every web interaction you make speaks HTTP. Now you know the language.
+### 3. Performance Optimization
+
+- Enable compression
+- Implement appropriate caching headers
+- Use connection pooling
+- Optimize payload size
+
+## Looking Forward: HTTP/3
+
+HTTP/3 represents the next evolution:
+
+- Built on QUIC protocol
+- Improved connection handling
+- Better performance on mobile networks
+- Reduced latency
+
+## Additional Resources
+
+- [HTTP/2 Specification](https://tools.ietf.org/html/rfc7540)
+- [HTTP/3 Draft](https://quicwg.org/)
+- [MDN Web Docs: HTTP](https://developer.mozilla.org/en-US/docs/Web/HTTP)
