--- a/data/blog/system-design.mdx
+++ b/data/blog/system-design.mdx
@@ -2,7 +2,7 @@
 title: 'System Design: How Tech Giants Build Systems That Never Break'
 date: '2024-10-26'
 tags: ['System Design']
-draft: false
+draft: true
 layout: PostBanner
 images: ['/static/images/system-design.jpeg']
 summary: 'Every successful tech system shares a hidden pattern. Thousands of well-funded startups crash under load.'
